variables.Variables.scala.error
Erreur de compilation :
Variables:1: error: not found: value x
x=0
^Variables:4: error: not found: value x
  x=x+1
  ^Variables:6: error: not found: value x
while (x!=0){
       ^Variables:8: error: not found: value x
  x=x-1
  ^