variables.Variables.scala.code
x=0
while (estSurBiscuit()==false){
  avance();
  x=x+1
}
while (x!=0){
  recule();
  x=x-1
}